tests/e2e/testdata/compiled-cases/input-validation/stacks/invalid/null-default-required.ub
stack: {
  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}

  factory: {
    inputs: {
      required-name: 'web'
      default-size: null
    }
  }
}
